# py_generic_emailer

./: .gitignore  README.rst  example.ini  pyproject.toml
py_generic_emailer/: cmd.py
tests/: test_py_generic_emailer.py
tests/test_config/: test.csv  test.ini  test.tmpl
