[tool.poetry]
name = "py-generic-emailer"
version = "0.1.0"
description = ""
authors = ["Andrew Yates <ayates@ebi.ac.uk>"]
packages = [{include = "py_generic_emailer"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
coverage = {extras = ["toml"], version = "^7.2.7"}
flake8 = "^6.0.0"
flake8-bugbear = "^23.7.10"
black = "^25.1.0"

[tool.poetry.scripts]
emailer = "py_generic_emailer.cmd:cli"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 40

[flake8]
max-line-length = 88
max-complexity = 10
select = "C,E,F,W,B,B950"
ignore = "E203,E501,W503"
exclude = ".git,__pycache__,*.egg-info,.nox,.pytest_cache,.mypy_cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
